formatting (exec of prettier)